force-app/main/default/objects/Client_Data_Change__c/Client_Data_Change__c.object-meta.xml
<CustomObject>
    <description>A new object to keep a track of the Client Information being changed on the Client record. EN-0676</description>
    <label>Client Data Change</label>
    <nameField>
        <label>Client Data Change Record Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Data Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>