force-app/main/default/objects/Client_Data_Change__c/fields/Additional_Approver__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Data_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>