force-app/main/default/objects/Client_Data_Change__c/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <description>This field will be shown as a Case&apos;s Subject EN-0676</description>
    <formula>&quot;Client Coordinator Change Request for&quot;+&apos; &apos;+Client_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Subject</label>
    <type>Text</type>
</CustomField>