force-app/main/default/objects/Client_Data_Change__c/fields/CC_Delegated_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Delegated_Approver_Email__c</fullName>
    <description>EN-0676 which will record the email id of Client Co-ordinator&apos;s delegated approver</description>
    <label>CC Delegated Approver Email</label>
    <type>Email</type>
</CustomField>