force-app/main/default/objects/Client_Data_Change__c/fields/Client_CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_CIF_Number__c</fullName>
    <description>This field is used to store the CIF number of the client EN-0676</description>
    <formula>Client_Name__r.CIF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client CIF Number</label>
    <type>Text</type>
</CustomField>