force-app/main/default/objects/Client_Data_Change__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be a master for all the records which are getting created. EN-0676</description>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Data Changes</relationshipLabel>
    <relationshipName>Client_Coordinator_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>