force-app/main/default/objects/Client_Data_Change__c/fields/Current_CCBM__c.field-meta.xml
<CustomField>
    <fullName>Current_CCBM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current CCBM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Data_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>