force-app/main/default/objects/Client_Data_Change__c/fields/Current_Client_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Current_Client_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the value of the current client coordinator of the client. EN-0676</description>
    <label>Current Client Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Coordinator_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>