force-app/main/default/objects/Client_Data_Change__c/fields/Keep_Current_CC__c.field-meta.xml
<CustomField>
    <fullName>Keep_Current_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep Current CC</label>
    <type>Checkbox</type>
</CustomField>