force-app/main/default/objects/Client_Data_Change__c/fields/NCC_Delegated_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>NCC_Delegated_Approver_Email__c</fullName>
    <description>EN-0676 - This is used for recording email id of New Client Co-ordinator&apos;s Delegated Approver</description>
    <label>NCC Delegated Approver Email</label>
    <type>Email</type>
</CustomField>