force-app/main/default/objects/Client_Data_Change__c/fields/New_Client_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New Client Coordinator EN-0676</description>
    <label>New Client Coordinator</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active users and users within the following User Divisions: Corporate Banking, Global Markets, Investment Banking, Transactional Products and Services, General Management, Real Estate can be searched.</errorMessage>
        <filterItems>
            <field>User.User_Division__c</field>
            <operation>equals</operation>
            <value>Client Coverage, General Management, Global Markets, Investment Banking, Real Estate, Transactional Products and Services</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Coordinator_Change_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>