force-app/main/default/objects/Client_Data_Change__c/fields/New_Client_Coordinator_Role__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Coordinator_Role__c</fullName>
    <description>Only the core team roles should be available for assigning it to the new client coordinator. EN-0676</description>
    <label>New Client Coordinator Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Client Analyst</fullName>
            </value>
            <value>
                <fullName>Credit Officer</fullName>
            </value>
            <value>
                <fullName>Credit Risk</fullName>
            </value>
            <value>
                <fullName>Dedicated Service Consultant</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>GM Champion</fullName>
            </value>
            <value>
                <fullName>GM Client Manager</fullName>
            </value>
            <value>
                <fullName>GM Execution Manager</fullName>
            </value>
            <value>
                <fullName>IB Champion</fullName>
            </value>
            <value>
                <fullName>Investor Services Manager</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Legal Lead</fullName>
            </value>
            <value>
                <fullName>Manager Client Coverage</fullName>
            </value>
            <value>
                <fullName>Portfolio Specialist</fullName>
            </value>
            <value>
                <fullName>Product Specialist</fullName>
            </value>
            <value>
                <fullName>Sales/Cell Head</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sector/Client Coverage Head</fullName>
            </value>
            <value>
                <fullName>Service Advisor</fullName>
            </value>
            <value>
                <fullName>Service Advisory Manager</fullName>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
            <value>
                <fullName>Structurer</fullName>
            </value>
            <value>
                <fullName>TPS Champion</fullName>
            </value>
            <value>
                <fullName>Trade Finance Manager</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>Trade Service Advisory Manager</fullName>
            </value>
            <value>
                <fullName>Transaction Solutions Associate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>