force-app/main/default/objects/Client_Data_Change__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status keeps the track of the record for different approval steps. EN-0676</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Approved – Awaiting Execution</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Data Update Completed</fullName>
            </value>
            <value>
                <fullName>Data Update Not Completed</fullName>
            </value>
            <value>
                <fullName>Approval Step Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>