force-app/main/default/objects/Client_Data_Change__c/recordTypes/Client_Coordinator_Request.recordType-meta.xml
<RecordType>
    <fullName>Client_Coordinator_Request</fullName>
    <active>true</active>
    <description>The record type for client Coordinator change request. EN-0676</description>
    <label>Client Coordinator Request</label>
</RecordType>