force-app/main/default/objects/Client_Data_Change__c/recordTypes/Running_Approval.recordType-meta.xml
<RecordType>
    <fullName>Running_Approval</fullName>
    <active>true</active>
    <label>Running Approval</label>
</RecordType>