force-app/main/default/objects/Client_Data_Change__c/validationRules/Cant_create_for_Inactive_Clients.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_create_for_Inactive_Clients</fullName>
    <active>true</active>
    <errorConditionFormula>Client_Name__r.RecordType.DeveloperName == &apos;Inactive&apos;
|| Client_Name__r.RecordType.DeveloperName == &apos;Personal_Business_Banking_Client&apos;
||  (Client_Name__r.Owner.FirstName = &apos;Archived&apos;
&amp;&amp; Client_Name__r.Owner.LastName = &apos;Clients&apos; )
|| 
( Client_Name__r.Owner.FirstName = &apos;PBB&apos; &amp;&amp; 
Client_Name__r.Owner.LastName = &apos;Clients&apos; )</errorConditionFormula>
    <errorMessage>You can’t raise a client data change request for a client where Client Coordinator is Archived Clients or PBB Clients.</errorMessage>
</ValidationRule>