force-app/main/default/objects/Client_Data_Change__c/validationRules/No_new_if_approval_is_in_progress.validationRule-meta.xml
<ValidationRule>
    <fullName>No_new_if_approval_is_in_progress</fullName>
    <active>true</active>
    <description>US-1253</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Submitted For Approval&apos;), RecordType.DeveloperName=&apos;Client_Coordinator_Request&apos;,ISNEW())</errorConditionFormula>
    <errorMessage>The approval process is already in progress</errorMessage>
</ValidationRule>