force-app/main/default/objects/Client_Data_Change__c/validationRules/No_Same_New_And_Old_CC.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Same_New_And_Old_CC</fullName>
    <active>true</active>
    <errorConditionFormula>New_Client_Coordinator__c ==  Current_Client_Coordinator__c</errorConditionFormula>
    <errorMessage>You can’t raise a CC change request where current and new Client Coordinator is the same user</errorMessage>
</ValidationRule>